[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gamma-blast-engine"
version = "0.2.0"
description = "Local GammaBlastEngine research stack for gamma-blast prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "orjson",
    "prometheus-client>=0.20.0",
    "pydantic-settings>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0"
]
analysis = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0"
]

[tool.setuptools]
packages = ["gamma_blast_engine"]

[tool.setuptools.package-dir]
gamma_blast_engine = "gamma_blast_engine"

[tool.setuptools.exclude-package-data]
"*" = ["data*", "logs*", "configs*", "dashboard*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
